# Novel_Writer

./: .dockerignore  .gitignore  Dockerfile  README.md  README_DOCKER.md  config.yaml  config_instruct.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run_dashboard.sh  setup.py
docs/plans/: 2026-01-30-novel-writer-design.md  2026-01-30-novel-writer-implementation.md
novel_writer/: api.py  cli.py  config.py  dashboard.py  inference.py  profile.py
novel_writer/evaluation/: __init__.py  benchmark.py  metrics.py  prompts.py
novel_writer/export/: __init__.py  exporter.py
novel_writer/processing/: __init__.py  clean.py  curriculum.py  deduplicate.py  filter.py  format.py  ingest.py  instruct.py  mix.py  (+2 more)
novel_writer_v2/: __main__.py  app.py  config.py  pipeline.py  utils.py
novel_writer_v3/: .env.example  package-lock.json  package.json  requirements.txt
scripts/: clean_data.py  format_data.py  inference_mac.py  profile.sh  runpod_setup.sh  scrape_99csw.py  webui.py
tests/: test_benchmark.py  test_cli.py  test_config.py  test_curriculum.py  test_deduplicate.py  test_export.py  test_filter.py  test_format_data.py  test_inference.py  test_ingest.py  test_ingest_cli.py  test_instruct.py  test_metrics.py  test_mix.py  test_preference.py  test_segment.py  test_tuning.py
training/: DPO_Training.ipynb  Novel_Writer_Complete.ipynb  Novel_Writer_WebUI.ipynb  Train_Llama3_Advanced.ipynb  Train_Llama3_Colab.ipynb  Train_Llama3_Curriculum.ipynb  Train_Llama3_MultiGPU.ipynb  Train_MistralNemo_12B_English.ipynb  Train_Qwen3_8B_Chinese.ipynb  accelerate_config.yaml
(+61 files in other folders)
